Move into loading images rather than building graphs
Internet is fast, and we don't really care about building
graphs for now, we just want images!

--- a/application/src/components/Plot.css
+++ b/application/src/components/Plot.css
@@ -1,5 +1,5 @@
-.axis {
-    border-style: none none solid solid;
-    border-width: 1px;
-    border-color: #999;
+.scatter-plt {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
