--- a/application/src/components/Plot.css
+++ b/application/src/components/Plot.css
@@ -1,3 +1,10 @@
+.base-div {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 .scatter-plt {
     display: block;
     margin-left: auto;
